After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 646965 - rtpmanager: Number of active sources should be updated whenever the status of the source changes to active
rtpmanager: Number of active sources should be updated whenever the status of...
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other All
: Normal major
: 0.10.29
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-04-06 22:06 UTC by Håvard Graff (hgr)
Modified: 2011-04-11 21:54 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch (1.65 KB, patch)
2011-04-06 22:06 UTC, Håvard Graff (hgr)
committed Details | Review

Description Håvard Graff (hgr) 2011-04-06 22:06:57 UTC
Created attachment 185370 [details] [review]
patch

...
Comment 1 Olivier Crête 2011-04-11 21:42:35 UTC
commit 58ef84846ef9ea695d51930570e83d9f5eedc464
Author: Pascal Buhler <pascal.buhler@tandberg.com>
Date:   Tue Aug 24 13:54:58 2010 +0200

    rtpsession: Number of active sources should be updated whenever the status of the source changes to active
    
    Forward-ported by Olivier Crête
    
    https://bugzilla.gnome.org/show_bug.cgi?id=646965