rtpsession: Number of active sources should be updated whenever the status of the source changes to active

Forward-ported by Olivier Crête

https://bugzilla.gnome.org/show_bug.cgi?id=646965